--- a/labs/lab05/report/Makefile
+++ b/labs/lab05/report/Makefile
@@ -26,7 +26,7 @@ PDF_BIB_OPTIONS = --citeproc
 	-pandoc "$<" $(FILTERS) $(OPTIONS) $(BIB_OPTIONS) -o "$@"
 
 %.pdf: %.md
-	-pandoc "$<" $(FILTERS) $(PDF_ENGINE) $(PDF_OPTIONS) $(PDF_BIB_OPTIONS) $(FORMAT_OPTIONS) $(OPTIONS) -o "$@"
+	-pandoc "$<" $(FILTERS) $(PDF_ENGINE) $(PDF_OPTIONS) $(OPTIONS) -o "$@"
 
 all: $(FILES)
 
